# Banking-System

./: .gitignore  README.md
.github/workflows/: test.yml
Workflow Sheets/: IC-Agile-Project-Plan-11847.xlsx
docs/UML/: bankUML.uml
docs/Updated documentation/: IC-Agile-Project-Plan-11847.xlsx  IC-Agile-User-Story-11847.xlsx  Screenshot of gnatt chart.docx  Simple_User_Story_Template.docx  TSE requirements.txt  TSE-AgileProjectCharter.xlsx  Team meetings overview.docx
docs/diagrams/: InitalClassDiagram.drawio
docs/workflow-sheets/: IC-Agile-User-Story-11847.xlsx  TSE-AgileProjectCharter.xlsx
src/: compose.yaml
src/backend/: Dockerfile  alembic.ini  bank.db  main.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0168026960a3_initial_migration.py  0238d8953886_add_account_number.py  2881204d8f1a_add_is_active_column.py  4cfdb96bc34d_added_account_and_transaction.py  a549058b7d3d_add_datetime.py  dbd3d441b912_changed_accountid_to_id.py  f29053837d8b_fix_database.py
src/backend/app/: crud.py  database.py  models.py  schemas.py
src/backend/code/: crud.py  database.py  models.py  schemas.py
src/backend/tests/: test_main.py
src/frontend/: .gitignore  Dockerfile  package-lock.json  package.json
src/frontend/banking-app/: package-lock.json  package.json
src/frontend/banking-app/src/: App.js
src/frontend/src/: App.js  index.js
src/frontend/src/components/auth/: Login.js
src/frontend/src/components/pages/: Account.js  Deposit.js  Home.js  Transactions.js  Transfer.js  Withdraw.js
(+2 files in other folders)
